--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -2,9 +2,19 @@ name: QA
 
 on:
   push:
+    paths-ignore:
+      - '.github/workflows/reward.yml'
+      - '.github/workflows/reward-merged-prs.yml'
+      - '.github/ISSUE_TEMPLATE/*'
+      - '*.md'
     branches:
       - main
   pull_request:
+    paths-ignore:
+      - '.github/workflows/reward.yml'
+      - '.github/workflows/reward-merged-prs.yml'
+      - '.github/ISSUE_TEMPLATE/*'
+      - '*.md'
     branches:
       - main
 
