--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@ton-community/tlb-codegen": "^2.0.0-beta.1",
-    "@ton-community/tlb-parser": "^0.1.4",
+    "@ton-community/tlb-runtime": "^1.0.0-alpha.1",
     "@ton/core": "^0.61.0",
     "@ton/crypto": "^3.3.0",
     "@ton/test-utils": "^0.6.0",
